--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     <div class="w-full max-w-4xl h-[95vh] flex flex-col bg-gray-800 rounded-2xl shadow-2xl border border-gray-700">
         
         <div class="p-4 border-b border-gray-700 shadow-lg">
-            <h1 class="text-xl font-bold text-center text-blue-400">دستیار هوشمند محصولات</h1>
+            <h1 class="text-xl font-bold text-center text-blue-400">دستیار هوشمند آیین‌ نامه دانشگاه</h1>
         </div>
 
         <div id="chat-messages" class="flex-1 p-6 space-y-6 overflow-y-auto">
